--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@pragmasphere/vue-tree": "^0.4.0",
+    "axios": "^0.18.0",
     "nuxt": "^1.0.0-rc11",
     "tree-vue-component": "^5.1.1",
     "vuetify": "^0.17.4"
